# service/api/api-handler.go
@@ -6,36 +6,36 @@ import (
 
 // Handler returns an instance of httprouter.Router that handle APIs registered here
 func (rt *_router) Handler() http.Handler {
-	// USER
-	rt.router.PUT("/users/:user_id", rt.putNewUserNickname)    // ok +
-	rt.router.PUT("/users/:user_id/photo", rt.putNewUserPhoto) // notok +
-	rt.router.GET("/users/:user_id/photo", rt.getProfilePhoto)
+	// USER 
+	rt.router.PUT("/users/:user_id", rt.putNewUserNickname)    // ok
+	rt.router.PUT("/users/:user_id/photo", rt.putNewUserPhoto) // ok
+	rt.router.GET("/users/:user_id/photo", rt.getProfilePhoto) // ok
 	// SEARCH
-	rt.router.GET("/users", rt.searchUser) // ok +
+	rt.router.GET("/users", rt.searchUser) // ok 
 	// CHAT
-	rt.router.GET("/users/:user_id/chats", rt.getAllChats)                  // ok +
-	rt.router.GET("/users/:user_id/chats/:chat_id", rt.getMessagesFromChat) // ok +
+	rt.router.GET("/users/:user_id/chats", rt.getAllChats)                  // ok 
+	rt.router.GET("/users/:user_id/chats/:chat_id", rt.getMessagesFromChat) // ok 
 	// GROUP
-	rt.router.PUT("/chats", rt.createNewChat)                            // ok +
-	rt.router.PUT("/chats/:chat_id/photo", rt.putNewGroupPhoto)          // notok +
-	rt.router.GET("/chats/:chat_id/photo", rt.getGroupPhoto)
-	rt.router.PUT("/chats/:chat_id/members/:member_id", rt.addAMember)   // ok +
-	rt.router.PUT("/chats/:chat_id", rt.putNewGroupName)                 // ok +
-	rt.router.DELETE("/chats/:chat_id/members/:member_id", rt.leaveChat) // ok +
+	rt.router.PUT("/chats", rt.createNewChat)                            // ok 
+	rt.router.PUT("/chats/:chat_id/photo", rt.putNewGroupPhoto)          // ok
+	rt.router.GET("/chats/:chat_id/photo", rt.getGroupPhoto)			 // ok
+	rt.router.PUT("/chats/:chat_id/members/:member_id", rt.addAMember)   // ok 
+	rt.router.PUT("/chats/:chat_id", rt.putNewGroupName)                 // ok
+	rt.router.DELETE("/chats/:chat_id/members/:member_id", rt.leaveChat) // ok 
 	// MESSAGE
-	rt.router.PUT("/chats/:chat_id/messages/:message_id/status", rt.updateStatus)                    // qui
-	rt.router.POST("/chats/:chat_id/messages", rt.sendmessage)                                       // ok +
-	rt.router.DELETE("/chats/:chat_id/messages/:message_id", rt.deleteMessage)                       // ok +
-	rt.router.GET("/chats/:chat_id/messages/:message_id/reaction", rt.getMessageReactions)           // ok +
-	rt.router.PUT("/chats/:chat_id/messages/:message_id/reaction/:reaction_id", rt.commentMessage)   // ok +
-	rt.router.DELETE("/chats/:chat_id/messages/:message_id/reaction/:reaction_id", rt.deleteComment) // ok +
-	rt.router.POST("/chats/:chat_id/forwarded/:message_id", rt.forwardMessage)                       // ok +
+	rt.router.PUT("/chats/:chat_id/messages/:message_id/status", rt.updateStatus)                    // ok 
+	rt.router.POST("/chats/:chat_id/messages", rt.sendmessage)                                       // ok 
+	rt.router.DELETE("/chats/:chat_id/messages/:message_id", rt.deleteMessage)                       // ok 
+	rt.router.GET("/chats/:chat_id/messages/:message_id/reaction", rt.getMessageReactions)           // ok 
+	rt.router.PUT("/chats/:chat_id/messages/:message_id/reaction/:reaction_id", rt.commentMessage)   // ok 
+	rt.router.DELETE("/chats/:chat_id/messages/:message_id/reaction/:reaction_id", rt.deleteComment) // ok 
+	rt.router.POST("/chats/:chat_id/forwarded/:message_id", rt.forwardMessage)                       // ok
 	// MEDIA
-	rt.router.POST("/chats/:chat_id/media", rt.sendMedia)     // notok - MODIFICA API
-	rt.router.GET("/chats/:chat_id/media/:media_id", rt.getMedia) // MODFICA API
-	rt.router.DELETE("/chats/:chat_id/media/:media_id", rt.deleteMedia) // notok -
+	rt.router.POST("/chats/:chat_id/media", rt.sendMedia)     // ok
+	rt.router.GET("/chats/:chat_id/media/:media_id", rt.getMedia) // ok
+	rt.router.DELETE("/chats/:chat_id/media/:media_id", rt.deleteMedia) // ok
 	// LOGIN
-	rt.router.POST("/session", rt.session) // ok +
+	rt.router.POST("/session", rt.session) // ok 
 
 	return rt.router
 }
